--- a/quiz.html
+++ b/quiz.html
@@ -1,30 +1,37 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./quiz.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./quiz.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <title>Quiz</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="game">
-            <div class="content">
-                <h1 class="question"></h1>
-                <div class="answers">
-                </div>
-            </div>
-            <button class="submit">Submit</button>
+      <div class="game">
+        <div class="content">
+          <h1 class="question"></h1>
+          <div class="answers"></div>
         </div>
-        <div class="result">
-            <h1>Your Result</h1>
-            <h3 class="correct"></h3>
-            <h3 class="wrong"></h3>
-            <h2 class="score"></h2>
-            <button class="play">Play Again</button>
-        </div>
+        <button class="submit">Submit</button>
+      </div>
+      <div class="result">
+        <h1>Your Result</h1>
+        <h3 class="correct"></h3>
+        <h3 class="wrong"></h3>
+        <h2 class="score"></h2>
+        <button class="play">Play Again</button>
+      </div>
+    </div>
+    <div class="progressBarContainer">
+      <div class="progressBarWrapper">
+        <div class="progressBar"></div>
+      </div>
     </div>
     <script src="./quiz.js"></script>
-</body>
+  </body>
 </html>
